--- a/NotificationContentExt/Base.lproj/MainInterface.storyboard
+++ b/NotificationContentExt/Base.lproj/MainInterface.storyboard
@@ -15,30 +15,30 @@
             <objects>
                 <viewController id="M4Y-Lb-cyx" userLabel="Notification View Controller" customClass="NotificationViewController" customModule="NotificationContentExt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello World" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="GcN-lo-r42">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="35"/>
+                                <rect key="frame" x="0.0" y="30" width="320" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="Dq6-Wg-tMM"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DaB-Ui-pnU">
-                                <rect key="frame" x="16" y="40" width="288" height="33"/>
+                                <rect key="frame" x="16" y="70" width="288" height="43"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqi-vV-qN6">
-                                        <rect key="frame" x="0.0" y="0.0" width="139" height="33"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="139" height="43"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <state key="normal" title="Accept">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pOM-hy-lXZ">
-                                        <rect key="frame" x="149" y="0.0" width="139" height="33"/>
+                                        <rect key="frame" x="149" y="0.0" width="139" height="43"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Reject">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -46,25 +46,36 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qst-1h-6zz">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="DaB-Ui-pnU" firstAttribute="centerX" secondItem="GcN-lo-r42" secondAttribute="centerX" id="ADl-XD-Adt"/>
                             <constraint firstItem="GcN-lo-r42" firstAttribute="trailing" secondItem="2BE-c3-nQJ" secondAttribute="trailing" id="KjS-ao-uiI"/>
                             <constraint firstItem="GcN-lo-r42" firstAttribute="leading" secondItem="2BE-c3-nQJ" secondAttribute="leading" id="Puw-Sw-bYX"/>
+                            <constraint firstItem="Qst-1h-6zz" firstAttribute="leading" secondItem="2BE-c3-nQJ" secondAttribute="leading" id="V5R-jL-QAe"/>
                             <constraint firstItem="DaB-Ui-pnU" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="YEm-Za-uYf"/>
+                            <constraint firstItem="GcN-lo-r42" firstAttribute="top" secondItem="Qst-1h-6zz" secondAttribute="bottom" constant="9.5" id="Zfs-AL-OIa"/>
+                            <constraint firstItem="Qst-1h-6zz" firstAttribute="top" secondItem="2BE-c3-nQJ" secondAttribute="top" id="gpj-q2-aS6"/>
+                            <constraint firstItem="Qst-1h-6zz" firstAttribute="trailing" secondItem="2BE-c3-nQJ" secondAttribute="trailing" id="inz-bC-At0"/>
                             <constraint firstItem="DaB-Ui-pnU" firstAttribute="top" secondItem="GcN-lo-r42" secondAttribute="bottom" constant="5" id="klU-92-tdk"/>
-                            <constraint firstItem="GcN-lo-r42" firstAttribute="top" secondItem="2BE-c3-nQJ" secondAttribute="top" id="o5H-uV-9MR"/>
+                            <constraint firstItem="GcN-lo-r42" firstAttribute="top" secondItem="2BE-c3-nQJ" secondAttribute="top" constant="30" id="o5H-uV-9MR"/>
                             <constraint firstItem="2BE-c3-nQJ" firstAttribute="bottom" secondItem="DaB-Ui-pnU" secondAttribute="bottom" constant="7" id="pCv-L0-cPD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2BE-c3-nQJ"/>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="80"/>
+                    <size key="freeformSize" width="320" height="120"/>
                     <connections>
                         <outlet property="acceptBtn" destination="sqi-vV-qN6" id="qk4-5h-GpZ"/>
-                        <outlet property="label" destination="GcN-lo-r42" id="lpW-cU-7IG"/>
+                        <outlet property="bodyLabel" destination="GcN-lo-r42" id="eoI-sD-lod"/>
+                        <outlet property="label" destination="Qst-1h-6zz" id="xrj-k9-4cR"/>
                         <outlet property="rejectBtn" destination="pOM-hy-lXZ" id="k0f-aJ-V7L"/>
                     </connections>
                 </viewController>
